--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,5 +1,3 @@
-<div class="banner">
-  <a href="http://software-carpentry.org" title="Software Carpentry">
-    <img alt="Software Carpentry banner" src="img/software-carpentry-banner.png" />
-  </a>
+<div id="headerCrest">
+		<a href="http://www.shef.ac.uk/"><img src="img/crest-l.gif" alt="The University of Sheffield"></a>
 </div>
