--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,36 @@
+
 <div class="footer">
-  <a class="label swc-blue-bg" href="http://software-carpentry.org">Software Carpentry</a>
-  <a class="label swc-blue-bg" href="https://github.com/swcarpentry/lesson-template">Source</a>
-  <a class="label swc-blue-bg" href="mailto:admin@software-carpentry.org">Contact</a>
-  <a class="label swc-blue-bg" href="LICENSE.html">License</a>
+<p align="RIGHT">
+</p><table align="RIGHT">
+<tbody><tr>
+<!----<TD width="150"><A HREF="http://www.sheffield.ac.uk/wrgrid">
+    <IMG SRC="../images/crest-l.gif" BORDER="0" ,ALIGN="left"> <BR>
+     Home </A>
+     </TD>  ----->
+<td width="170"><b>A</b>uthor : <br>
+                    <b>E</b>-mail : <br>
+                    <b>L</b>ast updated :  </td>
+
+<td>     <i> Research Computing Group, CiCS Dept. <br>
+<a href="mailto:hpchub@sheffield.ac.uk">hpchub@sheffield.ac.uk</a> <br>
+         </i>
+<script>
+
+<!-- comment
+// document.write('<B> ' + document.lastModified + '</B>')
+var zdate = document.lastModified;
+var zzobj  = new Date(zdate);
+var zzstr  = zzobj.toGMTString();
+var zzind  = zzstr.indexOf( ':', 0 ) - 3;
+   document.write('<I>' + zzstr.substring(0,zzind) + '</I>' );
+
+// disengage comment  -->
+
+</script><i>Thu, 28 May 2015</i>
+
+</td>
+
+</tr>
+</tbody></table>
+
 </div>
