--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,3 +1,16 @@
 <!-- Javascript placed at the end of the document so the pages load faster -->
-<script src="http://software-carpentry.org/v5/js/jquery-1.9.1.min.js"></script>
+<script>
+
+<!-- comment
+// document.write('<B> ' + document.lastModified + '</B>')
+var zdate = document.lastModified;
+var zzobj  = new Date(zdate);
+var zzstr  = zzobj.toGMTString();
+var zzind  = zzstr.indexOf( ':', 0 ) - 3;
+   document.write('<I>' + zzstr.substring(0,zzind) + '</I>' );
+
+// disengage comment  -->
+
+</script><i>Thu, 28 May 2015</i>
+<script src="js/jquery-1.9.1.min.js"></script>
 <script src="css/bootstrap/bootstrap-js/bootstrap.js"></script>
