--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,69 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="generator" content="pandoc">
-    <title>Software Carpentry: $pagetitle$</title>
+    <meta name="description" content="$pagetitle$">
+
+    <title>$pagetitle$</title>
     $header$
   </head>
+
+
+
   <body class="lesson">
+
+  <!-- global navigation -->
+<div id="globalNavigation">
+  <!-- global navigation links -->
+        <a href="#content"><img src="img/spacer.gif" alt="skip to content" height="1" width="1"></a> <img src="img/spacer.gif" alt=" " height="1" width="1">
+		<span><a href="http://www.sheffield.ac.uk/cics/research/" accesskey="1">Home</a> |</span>
+		<span><a href="https://sites.google.com/a/sheffield.ac.uk/hpchub/home" accesskey="c">&nbsp;&nbsp; HPChub &nbsp;&nbsp; </a> |</span>
+		<span><a href="https://www.sheffield.ac.uk/muse/login" accesskey="m">Log in to MUSE</a></span>
+  <!-- // global navigation links -->
+   <!-- search engine -->
+  <form name="gs" method="get" action="http://google.shef.ac.uk/search" id="searchBox">
+     <p>
+     <label for="searchterms">Search for</label>
+      <input name="q" size="20" maxlength="100" value=" your search" id="searchterms" onfocus="value=''" type="text">
+      <!-- <input name="Go" type="submit" value="Go" /> -->
+      <input name="btnG" value="Search" class="submit" type="submit">
+    </p>
+            <input name="sort" value="date:D:L:d1" type="hidden">
+            <input name="output" value="xml_no_dtd" type="hidden">
+            <input name="ie" value="UTF-8" type="hidden">
+            <input name="oe" value="UTF-8" type="hidden">
+            <input name="client" value="default_frontend" type="hidden">
+            <input name="proxystylesheet" value="default_frontend" type="hidden">
+            <input name="site" value="default_collection" type="hidden">
+  </form>
+  <!-- // search engine -->
+</div>
+<!-- // global navigation -->
+
+
+
+
     <div class="container card">
-      $banner$
+
+  <table summary="Header Table"><tbody><tr>
+	 <td id="headerLeft">
+		$banner$
+    </td>
+	<td id="headerRight">
+	        <!-- page heading  -->
+		  <div id="headerTitle">
+		<h1 id="pageTitle">$pagetitle$</h1>
+		  </div>
+		  <!-- // page heading -->
+    </td>
+  </tr>
+ </tbody></table>
+
+
+      
       <article>
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
