A convincing template, acceptable for developing course material

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@
     <meta name="generator" content="pandoc">
     <meta name="description" content="$pagetitle$">
 
-    <title>$pagetitle$</title>
+    <title>$coursetitle$</title>
     $header$
   </head>
 
@@ -55,7 +55,7 @@
 	<td id="headerRight">
 	        <!-- page heading  -->
 		  <div id="headerTitle">
-		<h1 id="pageTitle">$pagetitle$</h1>
+		<h1 id="pageTitle">$coursetitle$</h1>
 		  </div>
 		  <!-- // page heading -->
     </td>
