Addition of course exercises page and updates to links on main index

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
                     <b>L</b>ast updated :  </td>
 
 <td>     <i> Research Computing Group, CiCS Dept. <br>
-<a href="mailto:hpchub@sheffield.ac.uk">hpchub@sheffield.ac.uk</a> <br>
+<a href="mailto:hpchub@sheffield.ac.uk">research-it@sheffield.ac.uk</a> <br>
          </i>
 <script>
 
